--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -27,7 +27,7 @@ title: Le Wagon - Middleman
       Middleman is now running!
     </p>
     <p class="about">
-      <%= link_to "Meet the team", "team.html", class: "btn btn-primary" %>
+      <%= link_to "More about this template", "about.html" %>
     </p>
   </div>
 </div>
