Added CSS for colors and fonts to over-ride Bootstrap theme

--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -10,7 +10,7 @@
   .navbar-wagon-brand img {
     height: 50px;
   }
-  .navbar-wagon .avatar {
+  .avatar {
     height: 35px;
     width: 35px;
     border-radius: 50%;
